tests/baselines/reference/taggedTemplatesWithIncompleteNoSubstitutionTemplate1.errors.txt
tests/cases/compiler/taggedTemplatesWithIncompleteNoSubstitutionTemplate1.ts(5,15): error TS1160: Unterminated template literal.


==== tests/cases/compiler/taggedTemplatesWithIncompleteNoSubstitutionTemplate1.ts (1 errors) ====
    function f(x: TemplateStringsArray, y: string, z: string) {
    }
    
    // Incomplete call, not enough parameters.
    f `123qdawdrqw
                  
!!! error TS1160: Unterminated template literal.